--- a/experience.qmd
+++ b/experience.qmd
@@ -8,11 +8,15 @@
 
 -   Coordinated with local authorities for project implementation.
 
+{{< video https://www.youtube.com/watch?v=g--IDi_i3xs>}}
+
 ## **Student Ambassador \| The Bartlett, UCL** (2024-Present)
 
 -   Representing **MSc Urban Spatial Science** at outreach events.
 
 -   Supporting student engagement and academic mentoring.
+
+{{< video https://www.instagram.com/reel/DFNTCGvMCxw/?igsh=MWZ4bDZwZDc3Mm16cQ==>}}
 
 ## **Research Intern \| Climate Resettlement Project** (2018)
 
