added more projects

--- a/about.qmd
+++ b/about.qmd
@@ -1,4 +1,4 @@
-# About Me 🌍
+# About Me 
 
 I am a **postgraduate student in Urban Spatial Science** at The Bartlett, UCL, with a background in architecture and urbanism. My academic and professional journey has allowed me to develop expertise in geospatial analysis, urban planning, and sustainable mobility solutions.
 
