--- a/contact.qmd
+++ b/contact.qmd
@@ -1,4 +1,4 @@
-# Let's connect! 📩
+# Let's connect! 
 
 If you would like to collaborate or discuss about research or projects in urban spatial science, feel free to reach out!
 
