--- a/experience.qmd
+++ b/experience.qmd
@@ -1,4 +1,4 @@
-# Work Experience 💼
+# Work Experience 
 
 ## **Urban Designer \| Municipality of Lima** (2021-2024)
 
@@ -15,10 +15,6 @@
 -   Representing **MSc Urban Spatial Science** at outreach events.
 
 -   Supporting student engagement and academic mentoring.
-
-{{< video https://www.instagram.com/reel/DFNTCGvMCxw/?igsh=MWZ4bDZwZDc3Mm16cQ==>}}
-
-a
 
 ## **Research Intern \| Climate Resettlement Project** (2018)
 
