--- a/projects.qmd
+++ b/projects.qmd
@@ -1,16 +1,8 @@
-# Academic Projects 🏗️
-
-## Identification of associations between socio-economic factors and dwelling fires in London in 2021
-
--   Developed an **alternative urban model** for flood-prone communities.
-
--   Applied **geospatial analysis** to identify resettlement areas.
-
--   Presented at academic events in Peru and Spain.![](images/correlationmatrix1.png)
-
-![](images/borough_clustering.jpg)
+# Academic Projects
 
 ## **Assessing the Risks: Cycling Accident Severity in London**
+
+This research analyzes the spatial distribution of cycling accidents in London, classifying them by severity. The study employs Kernel Density Estimation (KDE) to visualize high-risk areas and develops a ranking tool to identify the most dangerous intersections for cyclists, aiding in traffic safety prioritization. Additionally, a regression analysis reveals key factors influencing accident severity, highlighting an inverse correlation between severe accidents and rush hour occurrences—suggesting that time of day plays a critical role in accident severity patterns.
 
 <iframe src="general_map.html" width="100%" height="500px">
 
@@ -20,13 +12,29 @@
 
 </iframe>
 
+<iframe src="top10general_2023.html" width="100%" height="500px">
+
+</iframe>
+
+## Identification of associations between socio-economic factors and dwelling fires in London in 2021
+
+This research examines the socio-economic variables most strongly linked to dwelling fire risk. The study, through the use of regression identifies ownership status and four-dimensional deprivation as key predictors, highlighting urban inequalities that increase vulnerability in certain communities. The results of the clustering analysis also serve as a valuable tool for guiding localized strategies and policies, ensuring they are tailored to the distinct socio-economic and spatial contexts of each cluster. In general, the findings emphasize that fire risk is a multidimensional issue, requiring mitigation strategies that extend beyond fire safety measures to address underlying socio-econ
+
+-   ![](images/correlationmatrix1.png)
+
+![](images/borough_clustering.jpg)
+
+## 
+
 ## **New York City evictions: an spatial and socioeconomic analysis**
 
--   Utilized Google Earth Engine to analyze land-use changes.
+This analysis explores the relationship between economic deprivation and eviction rates across NYC boroughs, using median income as a key economic indicator. The findings reveal a strong inverse correlation, showing that a \$10,000 increase in median income corresponds to a 19.3% decrease in eviction rates. Additionally, spatial analysis highlights significant clustering of high-eviction areas, particularly in the north, including the Bronx, where statistical tests confirm spatial autocorrelation and concentrated eviction hotspots.
 
--   Designed an early warning system for vulnerable settlements.
+![](images/local_moran.png)
 
--   Worked on research collaboration between PUCP and UCL.
+![](images/regression1.png)
+
+## ![](images/regression2.png){width="500"}
 
 ## **Alternative urban model for Bajo Belen, Iquitos**
 
