edited details of experience and projects

--- a/experience.qmd
+++ b/experience.qmd
@@ -1,14 +1,14 @@
-# Work Experience 
+# Work Experience
 
-## **Student Ambassador \| The Bartlett, UCL** ( 12. 2024 - Present)
+## **Student Ambassador \|** The Bartlett, UCL ( 12. 2024 - Present)
 
 Represented The Bartlett in academic and outreach initiatives, engaging with prospective students and the university community.
 
 -   Provided guidance on the MSc Urban Spatial Science program through events, Q&A sessions, and mentoring.
 
--   Supported public engagement and communication, enhancing visibility of The Bartlett’s student experience in social media
+-   Supported public engagement and communication, enhancing visibility of The Bartlett’s student experience in social media through content creation.
 
-## **Urban Designer \| Municipality of Lima** (10. 2021 - 09. 2024)
+## **Urban Designer \|** Municipality of Lima (10. 2021 - 09. 2024)
 
 Part of the core team for the Special Landscape Project for the Rimac River (PEPRR), one of the largest urban projects in Peru, focused on revitalizing Lima’s Historic Centre.
 
@@ -22,7 +22,7 @@ Part of the core team for the Special Landscape Project for the Rimac River (PEP
 
 {{< video https://www.youtube.com/watch?v=g--IDi_i3xs>}}
 
-## **Urban Designer \| Cordillera Sur** (02.2021 - 10.2021)
+## **Urban Designer \| Cordillera Sur (02.2021 - 10.2021)**
 
 Contributed to landscape, architecture, and urban design projects with a focus on environmental and cultural sustainability.
 
@@ -30,9 +30,9 @@ Contributed to landscape, architecture, and urban design projects with a focus o
 
 -   Designed visual communication materials for competitions and public presentations, showcasing urban proposals.
 
-## **Speaker \| Cordillera Sur** (12.2021 & 10.2021)
+## **Speaker \|** (12.2021 & 10.2021)
 
-#### Friedrich Ebert Foundation & ‘Acuerdo por Iquitos’ Foundation
+### **Friedrich Ebert Foundation & ‘Acuerdo por Iquitos’ Foundation**
 
 Presented two lectures in the forum ‘A better urban future for Iquitos’:
 
@@ -40,7 +40,7 @@ Presented two lectures in the forum ‘A better urban future for Iquitos’:
 
 -   Inhabiting the river: rethinking housing and the Amazonian neighborhood in Bajo Belen, Iquitos.
 
-#### **UPC - Polytechnic University of Catalonia**
+### **UPC - Polytechnic University of Catalonia**
 
 Presented a lecture in the module "Architecture and Cooperation 2021" given at the ETSAV-UPC.
 
