--- a/projects.qmd
+++ b/projects.qmd
@@ -28,16 +28,16 @@ This research examines the socio-economic variables most strongly linked to dwel
 
 This analysis explores the relationship between economic deprivation and eviction rates across NYC boroughs, using median income as a key economic indicator. The findings reveal a strong inverse correlation, showing that a \$10,000 increase in median income corresponds to a 19.3% decrease in eviction rates. Additionally, spatial analysis highlights significant clustering of high-eviction areas, particularly in the north, including the Bronx, where statistical tests confirm spatial autocorrelation and concentrated eviction hotspots.
 
-![](images/local_moran.png)
+![](images/local_moran.png){fig-align="center"}
 
-![](images/regression1.png)
+![](images/regression1.png){fig-align="center"}
 
-![](images/regression2.png){width="500"}
+![](images/regression2.png){fig-align="center" width="500"}
 
 ## **Alternative urban model for Bajo Belen, Iquitos**
 
 This research proposes a sustainable and adaptive urban model to address the challenges faced by the flood-prone neighborhood of Bajo Belen, a cultural and economic hub in the Peruvian Amazon. Amid threats of relocation and the loss of territorial identity, the model aims to preserve the essence of Bajo Belen while avoiding current issues such as disconnection, overcrowding, and vulnerability to flooding. The proposal consists of a two-scale intervention: first, a master plan with three key intervention areas—connector, mitigator, and landscape borders—and transversal axes to integrate them; second, an urban and architectural design framework for elements like commerce, roads, housing, communal spaces, docks, and pools, tailored to local techniques, climate, and culture. This intervention demonstrates the potential for a new way of inhabiting the river, preserving social, economic, and environmental connections while ensuring a safe and dignified future for the community.
 
-{{< video https://youtu.be/yqOHqQDk1jY >}}
+![](images/gif.gif){fig-align="center" width="500"}
 
-![](images/gif.gif)
+{{< video https://youtu.be/yqOHqQDk1jY >}}
