--- a/contact.qmd
+++ b/contact.qmd
@@ -1,4 +1,4 @@
-# Let's connect! 
+# Let's connect!
 
 If you would like to collaborate or discuss about research or projects in urban spatial science, feel free to reach out!
 
@@ -9,3 +9,109 @@ If you would like to collaborate or discuss about research or projects in urban 
 ::: {.badge-base .LI-profile-badge data-locale="en_US" data-size="medium" data-theme="light" data-type="HORIZONTAL" data-vanity="fiorellaguillenh" data-version="v1"}
 <a class="badge-base__link LI-simple-link" href="https://uk.linkedin.com/in/fiorellaguillenh?trk=profile-badge">
 :::
+
+```{=html}
+<div class="github-card" id="github-card">
+    <!-- Header con el logo de GitHub con texto -->
+    <div class="github-header">
+        <a id="github-profile-link" href="#" target="_blank">
+            <img id="github-logo" src="https://pngimg.com/uploads/github/github_PNG23.png" alt="GitHub Logo">
+        </a>
+    </div>
+    
+    <div class="header">
+        <img id="github-avatar" src="" alt="GitHub Avatar">
+        <div>
+            <h3 id="github-name"></h3>
+            <p id="github-username"></p>
+        </div>
+    </div>
+    <p id="github-bio"></p>
+    <a id="github-link" href="#" target="_blank" class="github-button">See profile</a>
+</div>
+```
+
+
+
+```{=html}
+<script>
+    fetch('https://api.github.com/users/fiorellaguillen')
+    .then(response => response.json())
+    .then(data => {
+        document.getElementById('github-avatar').src = data.avatar_url;
+        document.getElementById('github-name').textContent = data.name || data.login;
+        document.getElementById('github-username').textContent = "@" + data.login;
+        document.getElementById('github-bio').textContent = data.bio || "No bio available";
+        document.getElementById('github-link').href = data.html_url;
+        document.getElementById('github-profile-link').href = data.html_url; // Enlace en el logo de GitHub
+    });
+</script>
+```
+
+
+
+```{=html}
+<style>
+    .github-card {
+        border: 1px solid #ddd;
+        border-radius: 10px;
+        width: 280px;
+        font-family: Arial, sans-serif;
+        padding: 15px;
+        text-align: left;
+        background-color: white;
+        position: relative;
+    }
+    /* Header con el logo de GitHub (texto completo) */
+    .github-header {
+        display: flex;
+        justify-content: left;
+        padding: 10px 0;
+        border-bottom: 1px solid #ddd;
+        background-color: ##e0e0de;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+    }
+    .github-header img {
+        width: 120px; /* Ajustamos tamaño para que se vea bien */
+        height: auto;
+    }
+    .github-card .header {
+        display: flex;
+        align-items: center;
+        padding: 10px;
+    }
+    .github-card img {
+        border-radius: 50%;
+        height: 50px;
+        margin-right: 10px;
+    }
+    .github-card h3 {
+        margin: 0;
+        font-size: 15px;
+    }
+    .github-card p {
+        margin: 5px 0;
+        font-size: 14px;
+        color: #555;
+    }
+    /* Botón "Ver perfil" con borde azul y texto en negrita */
+    .github-button {
+        display: block;
+        text-align: center;
+        text-decoration: none;
+        color: #1563c2;
+        padding: 6px;
+        border: 2px solid #1563c2;
+        border-radius: 6px;
+        margin-top: 10px;
+        font-weight: bold; /* Texto en negrita */
+        background-color: white;
+    }
+    .github-button:hover {
+        background-color: #1563c2;
+        color: white;
+    }
+</style>
+
+
