--- a/about.qmd
+++ b/about.qmd
@@ -6,7 +6,7 @@ If you want to have a copy of my CV in pdf, you can get it [here](https://github
 
 ------------------------------------------------------------------------
 
-### 🎓 Education
+## 🎓 Education
 
 -   **MSc Urban Spatial Science** – UCL, The Bartlett, London, UK (2025)
 
@@ -24,7 +24,7 @@ If you want to have a copy of my CV in pdf, you can get it [here](https://github
 
     Workshop on adaptive mobility systems, focusing on generative design and responsive urban transport solutions. Engaged in parametric design and fabrication exploring how computational tools can optimize urban mobility and its adaptability.
 
-### 🛠️ Technical skills
+## 🛠️ Technical skills
 
 -   **Programming & Data Science:** Python (Pandas, Geopandas, NetworkX), R (Geospatial Analysis), SQL
 
@@ -42,7 +42,7 @@ If you want to have a copy of my CV in pdf, you can get it [here](https://github
 
 -   **Microsoft Office and Google Suites**
 
-### 🛠️ Research and communication skills
+## 🛠️ Research and communication skills
 
 -   Research assistant on climate adaptation and resettlement strategies in flood-prone Amazonian communities.
 
@@ -64,7 +64,7 @@ If you want to have a copy of my CV in pdf, you can get it [here](https://github
 
 -   Curated and presented exhibitions showcasing urban research and policy proposals.
 
-### 🎤Languages
+## 🎤Languages
 
 -   Spanish Native
 
@@ -72,20 +72,20 @@ If you want to have a copy of my CV in pdf, you can get it [here](https://github
 
 -   German B2 level
 
-### 🏆Awards & Recognitions
+## 🏆Awards & Recognitions
 
-#### Bicentennial Generation Scholarship (2024)
+**Bicentennial Generation Scholarship (2024)**
 
 -   Awarded to Peruvian professionals of high academic performance to finance their postgraduate studies.
 
-#### Circular economy and sustainability (2023)
+**Circular economy and sustainability (2023)**
 
 -   Received this award for one of the interventions of the Special Landscape Project for the Rimac river.
 
-#### International Grand Prize for Sustainable Urban Design (2021)
+**International Grand Prize for Sustainable Urban Design (2021)**
 
 -   Recognition for the Special Landscape Project for the Rimac River, a proposal for the recovery of historic public spaces in Lima.
 
-#### **Faculty of Architecture Excellence Award** (2018 & 2022)
+**Faculty of Architecture Excellence Award (2018 & 2022)**
 
 -   Received the Excellence award of the Architecture and Urbanism Faculty, for outstanding students of the faculty.
