edit position of photo in cellphones

--- a/index.qmd
+++ b/index.qmd
@@ -32,13 +32,19 @@ Feel free to explore my projects, and don’t hesitate to reach out!
         #intro-container {
             flex-direction: column; /* Imagen arriba, texto abajo */
             text-align: center;
+            align-items: center; /* Centrar todo el contenido */
         }
         #text-container, #image-container {
             width: 100% !important;
             text-align: center;
         }
+        #image-container {
+            order: -1; /* Mueve la imagen al inicio */
+        }
         #profile-pic {
             max-width: 80%; /* Ajusta el tamaño en móvil */
+            display: block;
+            margin: 0 auto; /* Asegura que quede centrado */
         }
     }
 </style>
@@ -50,7 +56,6 @@ Feel free to explore my projects, and don’t hesitate to reach out!
 
 ::: {style="height: 20px;"}
 :::
-
 
 ::::::: {style="display: flex; justify-content: space-between; gap: 10px;"}
 ::: {style="width: 23%;"}
